--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+* {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  box-sizing: border-box;
+}
+
+.topleft {
+  width: 220px;
+  height: 150px;
+  background-color: purple;
+  color: whitesmoke;
+  text-align: center;
+  padding-top: 60px;
+  font-size: x-large;
+  float: left;
+  box-shadow: 0px 5px 5px rgb(46, 0, 42);
+  text-shadow: 3px 3px black;
+}
+
+.nav {
+  height: 150px;
+  background-color: red;
+  color: beige;
+  font-size: x-large;
+  text-align: center;
+  padding-top: 50px;
+  box-shadow: 0px 5px 5px rgb(39, 0, 0);
+  text-shadow: 2px 2px black;
+}
+
+.sidePanel {
+  bottom: 0;
+  width: 220px;
+  float: left;
+  background-color: blue;
+  color: whitesmoke;
+  top: 150px;
+  position: absolute;
+  clear: both;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listButton {
+  left: 220px;
+  right: 0;
+  padding: 20px;
+  color: black;
+  background-color: rgb(225, 225, 216);
+  border: white;
+  top: 150px;
+  position: absolute;
+  bottom: 0;
 }
