--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,6 +2,7 @@
   padding: 10px;
   border: 2px solid rgb(156, 214, 247);
   background-color: turquoise;
+  color: rgb(10, 0, 151);
 }
 
 .listItem {
